--- a/about-us.html
+++ b/about-us.html
@@ -110,13 +110,13 @@ About Finorator</h1>
                     <div class="vision-card col-xl-5 col-lg-4">
                         <img src="assets/vision.png"/>
                         <div class="theme-head text-center">Our Vision</div>
-                        <div class="description text-center">Financial freedom for everyone
+                        <div class="description text-center font-weight-bold">Financial freedom for everyone
 </div>
                     </div>
                     <div class="vision-card col-xl-5 col-lg-4">
                         <img src="assets/mission.png"/>
                         <div class="theme-head text-center">Our Mission</div>
-                        <div class="description text-center">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
+                        <div class="description text-center font-weight-bold">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
 </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@ About Finorator</h1>
             <div class="container">
                 <div class="theme-head text-center">
                     Who we are ?                     
-                    <div class="description text-center">Our team of Chartered Accountant professional specialized in the field of finance have made a unified platform 
+                    <div class="description text-center font-weight-bold">Our team of Chartered Accountant professional specialized in the field of finance have made a unified platform 
                         <b>FINORATOR</b> to help you accomplish your financial goals &amp; manage all financial operations inside a single platform.
                     </div>
                 </div>
@@ -140,17 +140,17 @@ About Finorator</h1>
                         <div class="carousel-item active">
                             <div class="row" style="justify-content: center;">
                                 <div class="team-card col-xl-3 col-lg-4">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2038.png">
                                     <h3>S. Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
                                     <p>Founder</p>
                                 </div>
                                 <div class="team-card col-xl-3 col-lg-4">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2040.png">
                                     <h3>K. APOORV</h3>
                                     <p>Founder</p>
                                 </div>
                                 <div class="team-card col-xl-3 col-lg-4">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2042.png">
                                     <h3>Ayush Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
                                     <p>Product Development Manager</p>
                                 </div>
@@ -159,12 +159,12 @@ About Finorator</h1>
                         <div class="carousel-item">
                             <div class="row" style="justify-content: center;">
                                 <div class="team-card col-lg-4 col-xl-3">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2041.png">
                                     <h3>Dikshita Agrawal<br><span style="font-size: 16px;">(Company Secretary)</span></h3>
                                     <p>Product Development Manager</p>
                                 </div>
                                 <div class="team-card col-xl-3 col-lg-4">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2039.png">
                                     <h3>Anjali Patel</h3>
                                     <p>HR Manager</p>
                                 </div>
@@ -307,7 +307,8 @@ About Finorator</h1>
                         <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
 City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
 Monday - Friday: 10AM - 6PM<b>
-Email Id</b> – support@finorator.com</p>
+Email Id</b> – support@finorator.com<br><b>
+Contact No.</b> – 7869226891</p>
                     </div>
                 </div>
                 <hr>
