--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div>
                             <h1 class="theme-h1 text-white">All financial Solutions<br><a class="typewrite" data-period="2000" data-type='[ "Under One Roof.", "with Single Click." ]' style="color: rgba(0, 0, 0, 0.5) !important;"></a></h1>
                             <p class="theme-p mb-4 text-light">Get access to all financial products and services of different segments in a single platform</p>
-                            <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
+                            <a class="theme-btn btn my-2 my-sm-0 theme-bg2" href="#features-main">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -184,11 +184,11 @@
                 </div>
             </div>
         </div>
-        <div class="section-body features">
+        <div class="section-body features" id="features-main">
             <div class="container">
                 <div class="theme-head text-center">
                     Why Choose Finorator?
-                    <div class="description text-center">Choosing Finorator helps you manage all personal financial decisions and operations seamlessly in one place
+                    <div class="description text-center font-weight-bold">Choosing Finorator helps you manage all personal financial decisions and operations seamlessly in one place
 </div>                     
                 </div>
                 <div class="row mb-5">
@@ -277,7 +277,7 @@
         <div class="section-body steps">
             <div class="container">
                 <div class="theme-head text-center">How Finorator Works?
-                    <div class="description text-center">Finorator helps you manage all your financial operations, teamed inside one platform
+                    <div class="description text-center font-weight-bold">Finorator helps you manage all your financial operations, teamed inside one platform
 </div>
                 </div>
                 <div class="row" style="align-items: center; justify-content: center;">
@@ -1042,7 +1042,8 @@ Top Mutual Funds Recommendations for June 2021</h4>
                         <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
 City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
 Monday - Friday: 10AM - 6PM<b>
-Email Id</b> – support@finorator.com</p>
+Email Id</b> – support@finorator.com<br><b>
+Contact No.</b> – 7869226891</p>
                     </div>
                 </div>
                 <hr>
