--- a/partner.html
+++ b/partner.html
@@ -116,7 +116,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                 <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, and other investments products of every segment and seamlessly manage all financial operations of your business under one intergated CRM</p>
                 <br>
                 <br>
-                <div class="text-center theme-color">You’re just one step away from your 
+                <div class="text-center theme-color" style="font-size: 22px;">You’re just one step away from your 
                     <b>Dream Career</b>
                 </div>
                 <b></b>
@@ -309,7 +309,8 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
 City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
 Monday - Friday: 10AM - 6PM<b>
-Email Id</b> – support@finorator.com</p>
+Email Id</b> – support@finorator.com<br><b>
+Contact No.</b> – 7869226891</p>
                     </div>
                 </div>
                 <hr>
