--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -174,7 +174,8 @@ For questions related to updating or changing your any information or any other 
                         <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
 City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
 Monday - Friday: 10AM - 6PM<b>
-Email Id</b> – support@finorator.com</p>
+Email Id</b> – support@finorator.com<br><b>
+Contact No.</b> – 7869226891</p>
                     </div>
                 </div>
                 <hr>
